metadata/objects/User_DE_Data__c.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>Access Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceUrl__c</fullName>
        <label>Instance Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssuedAt__c</fullName>
        <label>Issued At</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuthId__c</fullName>
        <label>OAuth ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_DE_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User DE Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User DE Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User DE Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>